...

    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_kitchen_recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/add_kitchen_item" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Item"
        android:id="@+id/add_kitchen_item"
        android:layout_alignParentBottom="true"
...
